<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp">

    <LinearLayout
        android:id="@+id/qa_layout_1"
        android:layout_marginBottom="@dimen/dimen_16"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_question_1"
            style="@style/MyTextView"
            android:contentDescription="@string/question_no_1"
            android:text="@string/question_no_1" />

        <EditText
            android:id="@+id/text_answer_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_8"
            android:contentDescription="@string/answer_1_hint"
            android:hint="@string/answer_1_hint"
             />
        <ImageView
            android:id="@+id/mark"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:visibility="invisible"/>
        <TextView
            android:id="@+id/right_answer"
            style="@style/MyTextView"
            android:visibility="invisible"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="3dp">

        <LinearLayout
            android:id="@+id/qa_layout_2"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radio_question_2"
                style="@style/MyTextView"
                android:contentDescription="@string/question_no_2"
                android:text="@string/question_no_2" />

            <RadioGroup
                android:id="@+id/radio_group_answer_2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_8">

                <RadioButton
                    android:id="@+id/radio_answer_2_a"
                    style="@style/MyRadioButton"
                    android:contentDescription="@string/answer_2_label_a"
                    android:text="@string/answer_2_label_a" />

                <RadioButton
                    android:id="@+id/radio_answer_2_b"
                    style="@style/MyRadioButton"
                    android:contentDescription="@string/answer_2_label_b"
                    android:text="@string/answer_2_label_b" />

                <RadioButton
                    android:id="@+id/radio_answer_2_c"
                    style="@style/MyRadioButton"
                    android:contentDescription="@string/answer_2_label_c"
                    android:text="@string/answer_2_label_c" />

                <RadioButton
                    android:id="@+id/radio_answer_2_d"
                    style="@style/MyRadioButton"
                    android:contentDescription="@string/answer_2_label_d"
                    android:text="@string/answer_2_label_d" />
            </RadioGroup>
        </LinearLayout>

    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp">
        <LinearLayout
            android:id="@+id/qa_layout_3"
            android:layout_marginBottom="@dimen/dimen_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/checkbox_question_3"
                style="@style/MyTextView"
                android:contentDescription="@string/question_no_3"
                android:text="@string/question_no_3" />

            <CheckBox
                android:id="@+id/check_box_answer_3_a"
                style="@style/MyCheckBox"
                android:contentDescription="@string/answer_3_label_a"
                android:text="@string/answer_3_label_a" />

            <CheckBox
                android:id="@+id/check_box_answer_3_b"
                style="@style/MyCheckBox"
                android:contentDescription="@string/answer_3_label_b"
                android:text="@string/answer_3_label_b" />

            <CheckBox
                android:id="@+id/check_box_answer_3_c"
                style="@style/MyCheckBox"
                android:contentDescription="@string/answer_3_label_c"
                android:text="@string/answer_3_label_c" />

            <CheckBox
                android:id="@+id/check_box_answer_3_d"
                style="@style/MyCheckBox"
                android:contentDescription="@string/answer_3_label_d"
                android:text="@string/answer_3_label_d" />
        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp">
            <LinearLayout
                android:id="@+id/qa_layout_4"
                android:layout_marginBottom="@dimen/dimen_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/radio_question_4"
                    style="@style/MyTextView"
                    android:contentDescription="@string/question_no_4"
                    android:text="@string/question_no_4" />
                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/flag"/>

                <RadioGroup
                    android:id="@+id/radio_group_answer_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_8">

                    <RadioButton
                        android:id="@+id/radio_answer_4_a"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_4_label_a"
                        android:text="@string/answer_4_label_a" />

                    <RadioButton
                        android:id="@+id/radio_answer_4_b"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_4_label_b"
                        android:text="@string/answer_4_label_b" />

                    <RadioButton
                        android:id="@+id/radio_answer_4_c"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_4_label_c"
                        android:text="@string/answer_4_label_c" />

                    <RadioButton
                        android:id="@+id/radio_answer_4_d"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_4_label_d"
                        android:text="@string/answer_4_label_d" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp">

            <LinearLayout
                android:id="@+id/qa_layout_5"
                android:layout_marginBottom="@dimen/dimen_16"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_question_5"
                    style="@style/MyTextView"
                    android:text="@string/question_no_5" />

                <EditText
                    android:id="@+id/text_answer_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_8"
                    android:contentDescription="@string/answer_1_hint"
                    android:hint="@string/answer_1_hint"
                    />
                <TextView
                    android:id="@+id/right_answer_5"
                    style="@style/MyTextView"
                    android:visibility="invisible"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/card_view5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/card_margin"
            android:elevation="3dp">
            <LinearLayout
                android:id="@+id/qa_layout_6"
                android:layout_marginBottom="@dimen/dimen_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               android:background="@color/colorPrimary" >
                <TextView
                    android:id="@+id/radio_question_6"
                    style="@style/MyTextView"
                    android:contentDescription="@string/question_no_4"
                    android:text="@string/question_no_4" />
                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/shape"
                    android:layout_below="@id/radio_question_6"/>
            </RelativeLayout>
                <RadioGroup
                    android:id="@+id/radio_group_answer_6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dimen_8">

                    <RadioButton
                        android:id="@+id/radio_answer_6_a"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_6_label_a"
                        android:text="@string/answer_6_label_a" />

                    <RadioButton
                        android:id="@+id/radio_answer_6_b"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_6_label_b"
                        android:text="@string/answer_6_label_b" />

                    <RadioButton
                        android:id="@+id/radio_answer_6_c"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_6_label_c"
                        android:text="@string/answer_6_label_c" />

                    <RadioButton
                        android:id="@+id/radio_answer_6_d"
                        style="@style/MyRadioButton"
                        android:contentDescription="@string/answer_6_label_d"
                        android:text="@string/answer_6_label_d" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/submit_quiz"
            android:textColor="@color/whiteColor"
            android:layout_gravity="center"
            android:onClick="submitQuiz"
            android:text="@string/submit" />
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/whiteColor"
            android:layout_gravity="center"
            android:onClick="resetAnswers"
            android:text="@string/reset" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>